--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <body>
     <h1>VALORANT</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/zufMUTl-hu4?si=tMrEwpicDi-OdfQp&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <a href = "valorant.html">Click Here</a> to know about Valorant.
     <img width = "80%" src = "images.jpg">
     Valorant is good.
    </body>
